--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,13 @@ jobs:
     name: Check formatting (C)
     runs-on: ubuntu-latest
     env:
-      VERSION: 12
+      CLANG_FORMAT_VERSION: 12
     steps:
       - name: Install packages
         run: |
           URL='https://apt.llvm.org/'
           TOOLCHAIN='llvm-toolchain-focal-12'
-          PACKAGE="clang-format-${VERSION}"
+          PACKAGE="clang-format-${CLANG_FORMAT_VERSION}"
           wget -O - ${URL}llvm-snapshot.gpg.key | sudo apt-key add -
           sudo add-apt-repository "deb ${URL}focal/ ${TOOLCHAIN} main"
           sudo apt-get update
@@ -27,7 +27,7 @@ jobs:
       - name: Check formatting
         run: >
           find . -type f -iregex '^.*\.\(c\|h\)$' -print0 |
-          xargs -0 clang-format-${VERSION} --dry-run --Werror
+          xargs -0 clang-format-${CLANG_FORMAT_VERSION} --dry-run --Werror
   build:
     name: Build
     runs-on: windows-latest
@@ -44,5 +44,4 @@ jobs:
         with:
           submodules: true
       - name: Build
-        
         run: build.bat ${{matrix.build-type}}
