--- a/src/boot/rom_head.c.in
+++ b/src/boot/rom_head.c.in
@@ -22,17 +22,17 @@
 
 #include <genesis.h>
 
-// This assumes that bank switching is disabled giving us a max of 2MB ROM
+// Assumes that bank switching is disabled giving us a max ROM size of 2MB
 __attribute__((externally_visible)) const ROMHeader rom_header = {
     "SEGA MEGA DRIVE ",                                  // Console Name
-    "(C)Devon2021.FEB",                                  // Copyright
+    "(C)Devon{Year4Digits}.{Month3Letters}",             // Copyright
     "Quantum Burst                                   ",  // Domestic Name
     "Quantum Burst                                   ",  // Overseas Name
-    "GM 17211142-00",                                    // Serial Number
+    "GM 17211142-{Version2Digits}",                      // Serial Number
     0x0000,                                              // Checksum
-    "J               ",                                  // I/O Support
+    "J6              ",                                  // I/O Support
     0x00000000,                                          // ROM Start Address
-    0x000FFFFF,                                          // ROM End Address
+    0x0001FFFF,                                          // ROM End Address
     0x00FF0000,                                          // Start of Backup RAM
     0x00FFFFFF,                                          // End of Backup RAM
     "RA",                                                // "RA" for SRAM
