--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,25 +8,14 @@ jobs:
   check-formatting-c:
     name: Check Formatting (C)
     runs-on: ubuntu-latest
-    env:
-      VERSION: 12
+    container: ghcr.io/devpow112/clang-format
     steps:
-      - name: Install packages
-        run: |
-          URL='https://apt.llvm.org/'
-          CODENAME=$(lsb_release -cs)
-          PACKAGE="clang-format-${VERSION}"
-          TOOLCHAIN="llvm-toolchain-${CODENAME}-${VERSION}"
-          wget -O - "${URL}llvm-snapshot.gpg.key" | sudo apt-key add -
-          sudo add-apt-repository "deb ${URL}${CODENAME}/ ${TOOLCHAIN} main"
-          sudo apt-get update
-          sudo apt-get install --no-install-recommends -y ${PACKAGE}
       - name: Checkout
         uses: actions/checkout@v2.3.4
       - name: Check formatting
         run: >
           find . -type f -iregex '^.*\.\(c\|c.in\|h\)$' -print0 |
-          xargs -0 clang-format-${VERSION} --dry-run --Werror
+          xargs -0 clang-format --dry-run --Werror
   check-formatting-markdown:
     name: Check Formatting (Markdown)
     runs-on: ubuntu-latest
