Switch to use CMD script for CI
This makes sure that both the CMD and powershell scripts work as expected.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,7 @@ jobs:
         with:
           submodules: true
       - name: Build
-        run: ./build.ps1 -BuildType ${{matrix.build-type}}
+        shell: cmd
+        run: build ${{matrix.build-type}}
       - name: Report size
         run: du -hb out/rom_final.bin
