--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 .vscode/
-ext/*/*
-out/
-res/*
-!res/*/
-!res/*.res
-res/*/*
-!res/*/*.png
-src/boot/*
-!src/boot/rom_head.c.in
+extern/*/*
+game/out/
+game/res/*
+!game/res/*/
+!game/res/*.res
+game/res/*/*
+!game/res/*/*.png
+game/src/boot/*
+!game/src/boot/rom_head.c.in
