--- a/.github/workflows/update-license.yml
+++ b/.github/workflows/update-license.yml
@@ -7,6 +7,8 @@ on:
       - .github/workflows/update-license.yml
   schedule:
     - cron: '0 0 1 1 *'
+permissions:
+  contents: write
 env:
   REGEX: '^(((\/\/|#) )?Copyright \(c\) )[0-9]{4}( Devon Powell)$'
 jobs:
