--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,8 @@ on:
   push:
     branches:
       - main
+permissions:
+  contents: read
 jobs:
   check-formatting-c:
     name: Check Formatting (C)
@@ -33,7 +35,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build-type: [Debug, Release]
+        build-type:
+          - Debug
+          - Release
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.4
