--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,12 +23,12 @@ jobs:
   check-formatting-markdown:
     name: Check Formatting (Markdown)
     runs-on: ubuntu-latest
-    container: ghcr.io/devpow112/markdownlint
+    timeout-minutes: 5
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.4
       - name: Check formatting
-        run: find . -type f -iname '*.md' -print0 | xargs -0 markdownlint
+        uses: actionshub/markdownlint@2.0.2
   build:
     name: Build
     runs-on: windows-latest
