--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,28 +1,28 @@
 name: CI
 on:
   pull_request:
-    branches:
-      - main
+    branches: main
   push:
-    branches:
-      - main
+    branches: main
 permissions:
   contents: read
 jobs:
   check-formatting-c:
     name: Check Formatting (C)
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     container: ghcr.io/devpow112/clang-format
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.4
       - name: Check formatting
-        run: >
+        run: |
           find . -type f -iregex '^.*\.\(c\|c.in\|h\)$' -print0 |
           xargs -0 clang-format --dry-run --Werror
   check-formatting-markdown:
     name: Check Formatting (Markdown)
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     container: ghcr.io/devpow112/markdownlint
     steps:
       - name: Checkout
@@ -32,6 +32,7 @@ jobs:
   build:
     name: Build
     runs-on: windows-latest
+    timeout-minutes: 15
     strategy:
       fail-fast: false
       matrix:
