--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -1,24 +1,21 @@
 name: Sync Labels
 on:
   push:
-    branches:
-      - main
+    branches: main
     paths:
       - .github/workflows/sync-labels.yml
       - .github/labels.yml
 permissions:
   contents: read
   issues: write
+concurrency: sync-labels
 jobs:
   sync-labels:
     name: Sync Labels
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.4
       - name: Sync labels
         uses: micnncim/action-label-syncer@v1.2.0
-        env:
-          GITHUB_TOKEN: ${{github.token}}
-        with:
-          manifest: .github/labels.yml
