--- a/.github/workflows/update-license.yml
+++ b/.github/workflows/update-license.yml
@@ -1,20 +1,18 @@
 name: Update License
 on:
   push:
-    branches:
-      - main
-    paths:
-      - .github/workflows/update-license.yml
+    branches: main
+    paths: .github/workflows/update-license.yml
   schedule:
     - cron: '0 0 1 1 *'
 permissions:
   contents: write
-env:
-  REGEX: '^(((\/\/|#) )?Copyright \(c\) )[0-9]{4}( Devon Powell)$'
+concurrency: update-license
 jobs:
   update-license:
     name: Update License
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.4
