--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -19,3 +19,5 @@ jobs:
         uses: actions/checkout@v2.3.4
       - name: Sync labels
         uses: micnncim/action-label-syncer@v1.2.0
+        with:
+          token: ${{github.token}}
