--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.4
       - name: Check formatting
+        shell: bash
         run: |
           find . -type f -iregex '^.*\.\(c\|c.in\|h\)$' -print0 |
           xargs -0 clang-format --dry-run --Werror
@@ -28,6 +29,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.4
       - name: Check formatting
+        shell: bash
         run: find . -type f -iname '*.md' -print0 | xargs -0 markdownlint
   build:
     name: Build
