--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -8,17 +8,20 @@
   description: Clean-up or refactor of something already existing
   color: a7afe5
 - name: dependencies
-  description: Update dependencies
-  color: c2e0c6
+  description: Pull requests that updates a dependency file
+  color: 0366d6
 - name: documentation
   description: Improvements or additions to documentation
   color: 0075ca
 - name: duplicate
-  description: Already exists
+  description: This issue or pull request already exists
   color: cfd3d7
 - name: enhancement
   description: New feature or request
   color: a2eeef
+- name: github-actions
+  description: Pull requests that updates GitHub Actions code
+  color: 000000
 - name: good first issue
   description: Good for newcomers
   color: 7057ff
