--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,19 +4,27 @@ updates:
     directory: /
     schedule:
       interval: weekly
+      day: monday
+      time: '04:00'
+      timezone: America/Toronto
     rebase-strategy: auto
     labels:
       - auto
       - dependencies
+      - submodules
     reviewers:
       - devpow112
   - package-ecosystem: github-actions
     directory: /
     schedule:
       interval: weekly
+      day: monday
+      time: '04:00'
+      timezone: America/Toronto
     rebase-strategy: auto
     labels:
       - auto
       - dependencies
+      - github-actions
     reviewers:
       - devpow112
