--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -34,6 +34,9 @@
 - name: question
   description: Further information is requested
   color: d876e3
+- name: submodules
+  description: Pull requests that updates Submodule references
+  color: 000000
 - name: won't fix
   description: This will not be worked on
   color: ffffff
