Update license workflow

--- a/.github/workflows/update-license.yml
+++ b/.github/workflows/update-license.yml
@@ -35,12 +35,12 @@ jobs:
           git config user.name $COMMIT_USERNAME
           git config user.email $COMMIT_EMAIL
           git add -u
-          git commit -m "Update license year to ${{steps.year.outputs.value}}"
+          git commit -m 'Update license year to ${{steps.year.outputs.value}}'
           CREDENTIALS="x-access-token:$GITHUB_TOKEN"
           URL="https://$CREDENTIALS@github.com/${{github.repository}}.git"
           git remote set-url origin $URL
           git push origin main
         env:
-          GITHUB_TOKEN: ${{secrets.UPDATE_LICENSE_TOKEN}}
+          GITHUB_TOKEN: ${{secrets.PERSONAL_GITHUB_TOKEN}}
           COMMIT_USERNAME: github-actions[bot]
           COMMIT_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
