--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,6 @@
 name: CI
 on:
-  pull_request:
-    branches: main
-  push:
-    branches: main
+  workflow_call:
 permissions:
   contents: read
 jobs:
