--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,5 +44,9 @@ jobs:
       - name: Build
         shell: cmd
         run: build ${{matrix.build-type}}
-      - name: Report size
-        run: du -hb game/out/rom_final.bin
+      - name: Upload result
+        if: github.event_name == 'pull_request'
+        uses: actions/upload-artifact@v4.6.0
+        with:
+          name: Build (${{matrix.build-type}})
+          path: game/out/rom_final.bin
