--- a/.editorconfig
+++ b/.editorconfig
@@ -7,3 +7,8 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 indent_style = space
 indent_size = 2
+
+# mostly handled by clang-format
+[*.{h,c}]
+indent_style = space
+indent_size = 1
