--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,20 @@ insert_final_newline = true
 indent_style = space
 indent_size = 2
 
-# mostly handled by clang-format
+# handled by clang-format
 [*.{h,c}]
-indent_style = space
-indent_size = 1
+charset = unset
+end_of_line = unset
+insert_final_newline = unset
+trim_trailing_whitespace = unset
+indent_style = unset
+indent_size = unset
+
+# image format
+[*.{ase}]
+charset = unset
+end_of_line = unset
+insert_final_newline = unset
+trim_trailing_whitespace = unset
+indent_style = unset
+indent_size = unset
