--- a/.editorconfig
+++ b/.editorconfig
@@ -18,7 +18,7 @@ indent_style = unset
 indent_size = unset
 
 # image format
-[*.{ase}]
+[*.ase]
 charset = unset
 end_of_line = unset
 insert_final_newline = unset
